--- a/etl-job/pyproject.toml
+++ b/etl-job/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "api"
+name = "etl-job"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
@@ -9,8 +9,6 @@ dependencies = [
     "azure-identity>=1.21.0",
     "azure-keyvault-secrets>=4.9.0",
     "azure-servicebus>=7.14.2",
-    "fastapi[standard]>=0.115.12",
-    "psycopg2-binary>=2.9.10",
     "pydantic>=2.11.4",
     "pydantic-settings>=2.9.1",
     "requests>=2.32.3",
