--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -63,6 +63,10 @@ jobs:
         uses: docker/metadata-action@96383f45573cb7f253c731d3b3ab81c87ef81934 # v5.0.0
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=ref,event=branch,enable=${{ github.ref == 'refs/heads/main' }},suffix={{date 'YYYYMMDD'}}-{{sha}}
+            type=sha,enable=${{ github.ref != 'refs/heads/main' }},prefix=sha-
+            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' }} # Optionally tag 'latest' for main
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
@@ -102,10 +106,6 @@ jobs:
       - name: Deploy to Azure Container Apps
         uses: azure/container-apps-deploy-action@v2
         with:
-          containerAppName: api # Your container app name
-          resourceGroup: rg-test # Your resource group name
-          # Use imageToDeploy with the full image reference including digest from GHCR
-          # This ensures you deploy the *exact* image that was just built and pushed
+          containerAppName: api
+          resourceGroup: rg-test
           imageToDeploy: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}@${{ steps.build-and-push.outputs.digest }}
-          # No need for appSourcePath or dockerfilePath as we are deploying a pre-built image
-          # No need for acrName as the image is in GHCR
