--- a/.github/workflows/reusable-migrate-database.yml
+++ b/.github/workflows/reusable-migrate-database.yml
@@ -31,6 +31,7 @@ jobs:
       - name: Azure Login
         uses: azure/login@v1
         with:
+          auth-type: IDENTITY
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
