--- a/.github/workflows/internal-api-deploy.yml
+++ b/.github/workflows/internal-api-deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to GHCR
+name: Deploy Internal API to GHCR
 
 on:
   #   push:
@@ -9,9 +9,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
       - name: Build and push Docker image
         uses: ./.github/workflows/build-and-publish-docker-ghcr.yml
         with:
