--- a/.github/workflows/build-and-publish-docker-ghcr.yml
+++ b/.github/workflows/build-and-publish-docker-ghcr.yml
@@ -21,7 +21,8 @@ jobs:
       contents: read
       packages: write
       id-token: write
-
+    outputs:
+      image-name-with-sha: ${{ steps.set-output.outputs.image-name-with-sha }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -47,7 +48,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@96383f45573cb7f253c731d3b3ab81c87ef81934 # v5.0.0
         with:
-          images: ${{ inputs.registry }}/${{ inputs.image-name }}
+          images: ${{ inputs.registry }}/${{ github.repository_owner }}/${{ inputs.image-name }}
           tags: |
             type=ref,event=branch,enable=${{ github.ref == 'refs/heads/main' }},suffix={{date 'YYYYMMDD'}}-{{sha}}
             type=sha,enable=${{ github.ref != 'refs/heads/main' }},prefix=sha-
@@ -57,12 +58,21 @@ jobs:
         id: build-and-push
         uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
         with:
-          context: ./internal-api
+          context: ${{ inputs.file }}
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
+      - name: Output image name with SHA
+        id: set-output
+        run: |
+          # Extract the SHA-based tag (e.g., 20250507-abcdefg or sha-abcdefg)
+          SHA_TAG=$(echo "${{ steps.meta.outputs.tags }}" | grep -E '([0-9]{8}-[a-f0-9]{7,}|sha-[a-f0-9]{7,})' | head -n 1)
+          FULL_IMAGE_NAME="${{ inputs.registry }}/${{ github.repository_owner }}/${{ inputs.image-name }}:${SHA_TAG}"
+          echo "Image name with SHA: $FULL_IMAGE_NAME"
+          echo "image-name-with-sha=$FULL_IMAGE_NAME" >> $GITHUB_OUTPUT
 
       - name: Sign the published Docker image
         if: ${{ github.event_name != 'pull_request' }}
