--- a/.github/workflows/build-and-publish-docker-ghcr.yml
+++ b/.github/workflows/build-and-publish-docker-ghcr.yml
@@ -7,6 +7,9 @@ on:
         required: true
         type: string
         default: ghcr.io
+      context:
+        required: true
+        type: string
       file:
         required: true
         type: string
@@ -58,8 +61,8 @@ jobs:
         id: build-and-push
         uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
         with:
-          context: ./internal-api
-          file: Dockerfile
+          context: ${{ inputs.context }}
+          file: ${{ inputs.context }}/${{ inputs.file }}
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
