--- a/.github/workflows/deploy-azure-container-app.yml
+++ b/.github/workflows/deploy-azure-container-app.yml
@@ -3,15 +3,6 @@ name: Deploy Azure Container App
 on:
   workflow_call:
     inputs:
-      azure-client-id:
-        required: true
-        type: string
-      azure-tenant-id:
-        required: true
-        type: string
-      azure-subscription-id:
-        required: true
-        type: string
       registry:
         required: true
         type: string
@@ -25,6 +16,13 @@ on:
       resource-group:
         required: true
         type: string
+    secrets:
+      azure-client-id:
+        required: true
+      azure-tenant-id:
+        required: true
+      azure-subscription-id:
+        required: true
 
 jobs:
   deploy:
@@ -37,9 +35,9 @@ jobs:
       - name: Azure Login
         uses: azure/login@v1
         with:
-          client-id: ${{ inputs.azure-client-id }}
-          tenant-id: ${{ inputs.azure-tenant-id }}
-          subscription-id: ${{ inputs.azure-subscription-id }}
+          client-id: ${{ secrets.azure-client-id }}
+          tenant-id: ${{ secrets.azure-tenant-id }}
+          subscription-id: ${{ secrets.azure-subscription-id }}
 
       - name: Deploy to Azure Container Apps
         uses: azure/container-apps-deploy-action@v2
