--- a/.github/workflows/internal-api-deploy.yml
+++ b/.github/workflows/internal-api-deploy.yml
@@ -20,6 +20,10 @@ jobs:
 
   deploy:
     needs: build
+    permissions:
+      contents: read
+      packages: read
+      id-token: write
     uses: ./.github/workflows/deploy-azure-container-app.yml
     with:
       registry: ghcr.io
