--- a/.github/workflows/build-and-publish-docker-ghcr.yml
+++ b/.github/workflows/build-and-publish-docker-ghcr.yml
@@ -3,10 +3,6 @@ name: Build and Publish Docker to GHCR
 on:
   workflow_call:
     inputs:
-      registry:
-        required: true
-        type: string
-        default: ghcr.io
       context:
         required: true
         type: string
@@ -43,11 +39,11 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
 
-      - name: Log into registry ${{ inputs.registry }}
+      - name: Log into registry ghcr.io
         if: github.event_name != 'pull_request'
         uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
         with:
-          registry: ${{ inputs.registry }}
+          registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
@@ -55,7 +51,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@96383f45573cb7f253c731d3b3ab81c87ef81934 # v5.0.0
         with:
-          images: ${{ inputs.registry }}/${{ github.repository_owner }}/${{ inputs.image-name }}
+          images: ghcr.io/${{ github.repository_owner }}/${{ inputs.image-name }}
           tags: |
             type=ref,event=branch,enable=${{ github.ref == 'refs/heads/main' }},suffix={{date 'YYYYMMDD'}}-{{sha}}
             type=sha,enable=${{ github.ref != 'refs/heads/main' }},prefix=sha-
@@ -76,7 +72,7 @@ jobs:
       - name: Output image name with digest
         id: set-output
         run: |
-          FULL_IMAGE_NAME="${{ inputs.registry }}/${{ github.repository_owner }}/${{ inputs.image-name }}@${{ steps.build-and-push.outputs.digest }}"
+          FULL_IMAGE_NAME="ghcr.io/${{ github.repository_owner }}/${{ inputs.image-name }}@${{ steps.build-and-push.outputs.digest }}"
           echo "Image name with digest: $FULL_IMAGE_NAME"
           echo "image-name-with-digest=$FULL_IMAGE_NAME" >> $GITHUB_OUTPUT
 
