--- a/.github/workflows/internal-api-deploy.yml
+++ b/.github/workflows/internal-api-deploy.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build-docker-image:
     permissions:
       contents: read
       packages: write
@@ -17,19 +17,30 @@ jobs:
       context: ./api
       file: Dockerfile
 
-  deploy-staging:
-    needs: build
+  deploy-to-azure-container-apps:
+    needs: build-docker-image
     runs-on: ubuntu-latest
-    environment: staging
     permissions:
       contents: read
       packages: read
       id-token: write
+    strategy:
+      matrix:
+        environment:
+          - staging
+          - production
+    environment: ${{ matrix.environment }}
     steps:
-      - name: Call reusable deploy workflow for Assistant to Staging
-        uses: ./.github/workflows/deploy-azure-container-app.yml
+      - name: Azure Login
+        uses: azure/login@v1
         with:
-          image-name: ${{ needs.build_assistant.outputs.image-name-with-digest }}
-          container-app-name: ${{ vars.CA_ASSISTANT_API_NAME }}
-          resource-group: ${{ vars.CA_RESOURCE_GROUP }}
-          target_environment: "staging"
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+      - name: Deploy to Azure Container Apps
+        uses: azure/container-apps-deploy-action@v2
+        with:
+          containerAppName: ${{ vars.CA_ASSISTANT_API_NAME }}
+          resourceGroup: ${{ vars.CA_RESOURCE_GROUP }}
+          imageToDeploy: ghcr.io/${{ needs.build.outputs.image-name-with-digest }}
