--- a/.github/workflows/build-api.yml
+++ b/.github/workflows/build-api.yml
@@ -14,6 +14,10 @@ on:
 jobs:
   build-api:
     uses: ./.github/workflows/docker-build-and-push.yml
+    permissions:
+      contents: read
+      packages: write
+      attestations: write
     with:
       context: ./assistant
       dockerfile: ./assistant/Dockerfile
