--- a/.github/workflows/docker-build-and-push.yml
+++ b/.github/workflows/docker-build-and-push.yml
@@ -26,6 +26,7 @@ jobs:
       contents: read
       packages: write
       attestations: write
+      id-token: write
 
     steps:
       - name: Checkout repository
