--- a/chat-ui/package.json
+++ b/chat-ui/package.json
@@ -7,6 +7,9 @@
     "type": "git",
     "url": "https://github.com/simenkristoffers1/infra.git"
   },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
   "main": "dist/my-lit-button.js",
   "module": "dist/my-lit-button.js",
   "exports": {
