--- a/.github/workflows/deploy-dashboard.yml
+++ b/.github/workflows/deploy-dashboard.yml
@@ -1,10 +1,10 @@
-name: Build and Push API Image
+name: Build and Deploy Dashboard
 
 on:
   push:
     paths:
-      - "assistant/**"
-      - ".github/workflows/build-api.yml"
+      - "dashboard/**"
+      - ".github/workflows/deploy-dashboard.yml"
     branches:
       - main
     tags:
@@ -12,7 +12,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-api:
+  build-dashboard-image:
     uses: ./.github/workflows/docker-build-and-push.yml
     permissions:
       contents: read
@@ -20,6 +20,6 @@ jobs:
       attestations: write
       id-token: write
     with:
-      context: ./assistant
-      dockerfile: ./assistant/Dockerfile
-      image_name: ${{ github.repository }}/api
+      context: ./dashboard
+      dockerfile: ./dashboard/Dockerfile
+      image_name: ${{ github.repository }}/dashboard
