--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -1,10 +1,10 @@
-name: Build and Push Dashboard Image
+name: Build and Deploy API
 
 on:
   push:
     paths:
-      - "dashboard/**"
-      - ".github/workflows/build-dashboard.yml"
+      - "assistant/**"
+      - ".github/workflows/deploy-api.yml"
     branches:
       - main
     tags:
@@ -12,7 +12,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-dashboard:
+  build-api-image:
     uses: ./.github/workflows/docker-build-and-push.yml
     permissions:
       contents: read
@@ -20,6 +20,6 @@ jobs:
       attestations: write
       id-token: write
     with:
-      context: ./dashboard
-      dockerfile: ./dashboard/Dockerfile
-      image_name: ${{ github.repository }}/dashboard
+      context: ./assistant
+      dockerfile: ./assistant/Dockerfile
+      image_name: ${{ github.repository }}/api
