--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -23,3 +23,29 @@ jobs:
       context: ./assistant
       dockerfile: ./assistant/Dockerfile
       image_name: ${{ github.repository }}/api
+
+  deploy-api-to-staging:
+    needs: build-api-image
+    runs-on: ubuntu-latest
+    environment: staging
+    permissions:
+      id-token: write #This is required for requesting the OIDC JWT Token
+      contents: read #Required when GH token is used to authenticate with private repo
+
+    steps:
+      - name: Checkout to the branch
+        uses: actions/checkout@v2
+
+      - name: Azure Login
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.DEPLOY_AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.DEPLOY_AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.DEPLOY_AZURE_SUBSCRIPTION_ID }}
+
+      - name: Deploy to Azure Container Apps
+        uses: azure/container-apps-deploy-action@v2
+        with:
+          containerAppName: ca-aiasst-api-stag-eus
+          resourceGroup: rg-aiasst-stag-eus
+          imageToDeploy: ghcr.io/${{ needs.build-api-image.outputs.image_name_with_digest }}
