--- a/.github/workflows/deploy-dashboard.yml
+++ b/.github/workflows/deploy-dashboard.yml
@@ -23,3 +23,29 @@ jobs:
       context: ./dashboard
       dockerfile: ./dashboard/Dockerfile
       image_name: ${{ github.repository }}/dashboard
+
+  deploy-dashboard-to-staging:
+    needs: build-dashboard-image
+    runs-on: ubuntu-latest
+    environment: staging
+    permissions:
+      id-token: write
+      contents: read
+
+    steps:
+      - name: Checkout to the branch
+        uses: actions/checkout@v2
+
+      - name: Azure Login
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.DEPLOY_AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.DEPLOY_AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.DEPLOY_AZURE_SUBSCRIPTION_ID }}
+
+      - name: Deploy to Azure Container Apps
+        uses: azure/container-apps-deploy-action@v2
+        with:
+          containerAppName: ca-aiasst-dash-stag-eus
+          resourceGroup: rg-aiasst-stag-eus
+          imageToDeploy: ghcr.io/${{ needs.build-dashboard-image.outputs.image_name_with_digest }}
