--- a/.github/workflows/migrate-database.yml
+++ b/.github/workflows/migrate-database.yml
@@ -8,6 +8,10 @@ on:
         required: true
         type: string
 
+defaults:
+  run:
+    working-directory: ./assistant
+
 jobs:
   migrate-database:
     runs-on: ubuntu-latest
@@ -25,6 +29,23 @@ jobs:
           client-id: ${{ secrets.DBMIGRATE_AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.DBMIGRATE_AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.DBMIGRATE_AZURE_SUBSCRIPTION_ID }}
+
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: 9.0.x
+
+      - name: Restore dependencies
+        run: dotnet restore
+
+      - name: Run Migration Script
+        run: dotnet run --project ./src/DbUpMigrator
+        env:
+          DB_HOST: ${{ secrets.DB_HOST }}
+          DB_PORT: 5432
+          DB_USERNAME: ${{ secrets.DB_USER }}
+          DB_DATABASE: assistantdb
+          ASPNETCORE_ENVIRONMENT: Staging
 
       - name: Retrieve Access Token
         id: get-access-token
