--- a/chat-ui/.gitignore
+++ b/chat-ui/.gitignore
@@ -110,6 +110,9 @@ dist
 # vitepress cache directory
 **/.vitepress/cache
 
+# vite cache directory
+**/.vite
+
 # Docusaurus cache and generated files
 .docusaurus
 
@@ -134,3 +137,4 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+*storybook.log
