--- a/chat-ui/package.json
+++ b/chat-ui/package.json
@@ -1,11 +1,79 @@
 {
   "name": "@simenkristoffers1/chat-ui",
-  "version": "1.0.1",
-  "license": "MIT",
+  "version": "0.0.1",
+  "description": "Web component library for the Gaia Assistant Chat UI",
   "type": "module",
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
+  "main": "dist/gaia-chat-ui.umd.js",
+  "module": "dist/gaia-chat-ui.es.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "LICENSE",
+    "README.md",
+    "CHANGELOG.md"
+  ],
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "require": "./dist/gaia-chat-ui.umd.js",
+      "import": "./dist/gaia-chat-ui.es.js"
+    },
+    "./package.json": "./package.json"
   },
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc --emitDeclarationOnly && vite build",
+    "preview": "vite preview",
+    "lint": "eslint . --ext .ts,.js",
+    "lint:fix": "eslint . --ext .ts,.js --fix",
+    "format": "prettier --write \"src/**/*.ts\" \"*.{js,json,md}\"",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
+  },
+  "dependencies": {
+    "classnames": "^2.5.1",
+    "dayjs": "^1.11.13",
+    "lucide-static": "^0.510.0",
+    "marked": "^15.0.11"
+  },
+  "devDependencies": {
+    "@chromatic-com/storybook": "3",
+    "@eslint/js": "^9.27.0",
+    "@storybook/addon-a11y": "^8.6.14",
+    "@storybook/addon-essentials": "^8.6.14",
+    "@storybook/addon-links": "^8.6.14",
+    "@storybook/blocks": "8.6.14",
+    "@storybook/experimental-addon-test": "8.6.14",
+    "@storybook/test": "8.6.14",
+    "@storybook/web-components": "^8.6.14",
+    "@storybook/web-components-vite": "^8.6.14",
+    "@types/node": "^22.15.18",
+    "eslint": "^9.27.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-import-resolver-typescript": "^4.3.5",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.4.0",
+    "eslint-plugin-storybook": "^0.12.0",
+    "lit": "^3.3.0",
+    "prettier": "^3.5.3",
+    "sass": "^1.89.0",
+    "storybook": "^8.6.14",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.32.1",
+    "vite": "^6.3.5",
+    "vite-plugin-dts": "^4.5.4"
+  },
+  "peerDependencies": {
+    "lit": "^3.3.0"
+  },
+  "keywords": [
+    "lit",
+    "web-components",
+    "typescript",
+    "ui-library",
+    "vite"
+  ],
+  "author": "Visma Software Nordic",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/simenkristoffers1/infra.git"
@@ -14,25 +82,7 @@
     "url": "https://github.com/simenkristoffers1/infra/issues"
   },
   "homepage": "https://github.com/simenkristoffers1/infra/tree/main/chat-ui#readme",
-  "main": "dist/my-lit-button.js",
-  "module": "dist/my-lit-button.js",
-  "exports": {
-    ".": {
-      "import": "./dist/my-lit-button.js"
-    }
-  },
-  "files": [
-    "dist"
-  ],
-  "scripts": {
-    "build": "vite build"
-  },
-  "devDependencies": {
-    "@types/node": "^22.15.18",
-    "typescript": "^5.8.3",
-    "vite": "^6.3.5"
-  },
-  "dependencies": {
-    "lit": "^3.3.0"
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
   }
 }
