--- a/chat-ui/tsconfig.json
+++ b/chat-ui/tsconfig.json
@@ -1,20 +1,45 @@
 {
     "compilerOptions": {
-        "target": "ES2022",
+        "target": "ES2020",
         "module": "ESNext",
-        "moduleResolution": "Node",
         "lib": [
-            "ES2022",
-            "DOM"
+            "ES2020",
+            "DOM",
+            "DOM.Iterable"
         ],
         "declaration": true,
+        "declarationMap": true,
+        "emitDeclarationOnly": false,
+        "sourceMap": true,
         "outDir": "dist",
+        "rootDir": "src",
         "strict": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "noImplicitReturns": true,
+        "noFallthroughCasesInSwitch": true,
+        "moduleResolution": "node",
+        "allowSyntheticDefaultImports": true,
         "esModuleInterop": true,
-        "skipLibCheck": true,
         "experimentalDecorators": true,
+        "useDefineForClassFields": false,
+        "skipLibCheck": true,
+        "forceConsistentCasingInFileNames": true,
+        "isolatedModules": true,
+        "baseUrl": ".",
+        "paths": {
+            "@/*": [
+                "src/*"
+            ]
+        }
     },
     "include": [
-        "src"
+        "src/**/*.ts"
+    ],
+    "exclude": [
+        "node_modules",
+        "dist",
+        "**/*.stories.ts",
+        "**/*.test.ts"
     ]
 }
